# sparrow

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
__test__/: conan.py
sparrow/: .pre-commit-config.yaml  creation.py  main.py  server.py  shell.py
sparrow/application/: wish_application.py
sparrow/base/: __init__.py  api.py  app.py  blueprint.py  ctx.py  dataclasses.py  field_validators.py  fields.py  globals.py  pubsub.py  request.py  resource.py  schema.py  service.py  types.py  typing.py  view.py  wrappers.py
sparrow/blueprints/: general.py  hello.py
sparrow/codegen/: openapi.py
sparrow/commands/: cli.py
sparrow/config/: __init__.py  default.yaml  dev.yaml  settings.yaml
sparrow/context/: base_context.py  cache_context.py  locale_context.py  request_id_context.py  session_context.py  start_time_context.py  user_id_context.py  utils.py
sparrow/docker/: Dockerfile.base.eks  pip_cn.conf
sparrow/entry/: gevent_wsgi.py
sparrow/exceptions/: api_exception.py  errors.py
sparrow/extensions/: connector.py
sparrow/i18n/: dummy.py  wish_babel.py
sparrow/lib/: cookbook.py  instance_manager.py  py_enum.py
sparrow/log/: configurator.py  filters.py  formatter.py  meta.py  request_log.py
sparrow/micro/: constants.py  exceptions.py  micro_errors.py  micro_exceptions.py  micro_request.py  patch_utils.py  simple_client.py  utils.py  view_filter.py
sparrow/micro_clients/: wishpost_oauth.py
sparrow/monitor/: metrics.py
sparrow_flask/: creation.py  server.py  shell.py
wish_flask/: VERSION  creation.py  shell.py
(+200 files in other folders)
