[tool.poetry]
name = "sparrow"
version = "0.1.0"
description = ""
authors = ["shen <goodstudyQAQ@163.com>"]
readme = "README.md"
packages = [{include = "sparrow"}]

[tool.poetry.dependencies]
python = "^3.7"
dynaconf = "^3.1.11"
flask-smorest = "^0.40.0"
marshmallow-dataclass = "^8.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
